# libprf

./: .gitignore  CMakeLists.txt  README.md
Patches/: gtest.patch  libHaru_OSX  libHaru_cmake  libPCRE_cmake
cmake/: FindGD.cmake  FindPBBAM.cmake  FindPCRE.cmake  FindPLplot.cmake  FindPNG.cmake  Findhpdf.cmake  build_internal_GD.cmake  build_internal_PLplot.cmake  build_internal_hdf5.cmake  build_internal_hpdf.cmake  build_internal_pbbam.cmake  build_internal_pcre.cmake  build_internal_png.cmake  google_pump.cmake  options.cmake  summary.cmake
doc/: PacBioRepeatExperiment-concordance.tex  PacBioRepeatExperiment.Rnw  PacBioRepeatExperiment.tex  StateofArt-concordance.tex  StateofArt.Rnw  StateofArt.tex  StateofArt.toc  Supplemental_Material.doc
include/: CMakeLists.txt  RandomData.h  dna.h  matrix_functions.h  pb_bam.h  pb_common.h  pb_hdf5.h  pfCompute.h  pfComputeExt.h  pfConfig.h.cmake  pfDispatch.h  pfDispatchExt.h  pfHeuristicInline.h  pfIOInline.h  pfInput.h  pfMap.h  pfMapInline.h  pfOutput.h  pfProfile.h  pfProfileInline.h  pfRegexp.h  pfSequence.h  pfSequenceInline.h  pfStatistics.h  pfplot_functions.h  prf_config.h.cmake  threadpool.h
src/: CMakeLists.txt
src/core/: CMakeLists.txt  extprf_horizontal_sse41.c  fpga_horizontal_sse41.c  heuristic_sse2.c  heuristic_sse41.c  horizontal_cigar_sse41.c  horizontal_sse2.c  horizontal_sse41.c  repeat_horizontal_sse41.c  sse2_inline_fcts.h  sse41_inline_fcts.h  zone_horizontal_sse41.c
src/dispatch/: CMakeLists.txt  GetDispatchThreadIndex.c  compare.c  threadpool.c  threadpool.old
src/dispatch/FASTA/: FASTA_threads.h  dispatch.c  threadpool.c.pump  threads.c.pump
src/dispatch/PacBio/: alignHole.c  dispatchBAM.cpp  dispatchHDF5.c  pb_threads.h  threadpools.c.pump  threadpoolz.c.pump
src/dispatch/Random/: RandomData.c  dispatch.c  rd_threads.c  rd_threads.h
src/input/: CMakeLists.txt
src/input/FASTA/: fasta.c
src/input/PacBio/: ParseBam.c  pb_bam.cpp  pb_common.c  pb_hdf5.c  test_pbbam.cpp
src/map/: CMakeLists.txt  fixed_sse41.c  map.c
src/output/: CMakeLists.txt
src/output/Highlighted/: fasta.c
src/output/data/: column.c  matrix_output_data.c  row.c  tab.c
src/output/format/: Classification.c  Default.c  FaSearch.c  IncMatch.c  Interpro.c  OneLine.c  OutputWrapper.c.pump  PSMaker.c  PfScan.c  PsScan.c  Simple.c  TSV.c  fasta.c  xPSA.c
src/output/image/: matrix_output_png.c
src/output/pdf/: matrix_output_pdf.c
src/output/test/: matrix_output_test.c
src/tools/: CMakeLists.txt  FilterBAM.cpp  Mapping.c  PBSummary.c  PBTest.c  Profiling.c  Zoner.c  pfgen.c  system.h
src/utils/: CMakeLists.txt  Normalization.c  dna.c  io.c  landscape_palette  pfregexp.c  profile.c  statistics.c  statistics.s
src/wrapper/: CMakeLists.txt
src/wrapper/java/: CMakeLists.txt  Matrix.java  Profile.java  jniwrapper.c
