CONFIGURE_FILE(prf_config.h.cmake ${CMAKE_BINARY_DIR}/prf_config.h)
CONFIGURE_FILE(pfConfig.h.cmake ${CMAKE_BINARY_DIR}/pfConfig.h)

SET(HEADER_FILES
				pfProfile.h
				pfSequence.h
				pfRegexp.h
				pfProfileInline.h
				pfSequenceInline.h
				pfInput.h
				pfOutput.h
				pfCompute.h
				${CMAKE_BINARY_DIR}/pfConfig.h
				${CMAKE_BINARY_DIR}/pfVersion.h
)

IF(PRF_CORE_DISPATCH)
	LIST(APPEND HEADER_FILES pfDispatch.h)
	IF(PRF_INPUT_HDF5)
		LIST(APPEND HEADER_FILES pb_hdf5.h)
	ENDIF(PRF_INPUT_HDF5)
	IF(PRF_INPUT_PBBAM)
		LIST(APPEND HEADER_FILES pb_bam.h)
	ENDIF(PRF_INPUT_PBBAM)
	IF(PRF_INPUT_HDF5 OR PRF_INPUT_PBBAM)
		LIST(APPEND HEADER_FILES pb_common.h)
	ENDIF(PRF_INPUT_HDF5 OR PRF_INPUT_PBBAM)
ENDIF(PRF_CORE_DISPATCH)

IF(BUILD_SHARED_LIBS OR BUILD_STATIC_LIBS)
	IF(CMAKE_CURRENT_SOURCE_DIR STREQUAL CMAKE_SOURCE_DIR)
		INSTALL(FILES ${HEADER_FILES}
						DESTINATION include/
						COMPONENT dev
						)
	ENDIF(CMAKE_CURRENT_SOURCE_DIR STREQUAL CMAKE_SOURCE_DIR)
ENDIF(BUILD_SHARED_LIBS OR BUILD_STATIC_LIBS)
