IF(PRF_CORE_PCRE)
  INCLUDE_DIRECTORIES(${PCRE_INCLUDE_DIR})
ENDIF(PRF_CORE_PCRE)

################################## CORE ######################################
ADD_SUBDIRECTORY(core)

############################## INPUT FORMAT ##################################
ADD_SUBDIRECTORY(input)

################################ DISPATCH ####################################
ADD_SUBDIRECTORY(dispatch)

################################## UTILS #####################################
ADD_SUBDIRECTORY(utils)

################################## OUTPUT ####################################
ADD_SUBDIRECTORY(output)

################################ LIBRARY #####################################
ADD_SUBDIRECTORY(library)

################################ WRAPPER #####################################
IF(BUILD_SHARED_LIBS)
	ADD_SUBDIRECTORY(wrapper)
ENDIF(BUILD_SHARED_LIBS)

################################## MAP #######################################
ADD_SUBDIRECTORY(map)

#
#	Shared library
#
IF(BUILD_SHARED_LIBS)
	SET(PRF_LIB_SOURCES
				$<TARGET_OBJECTS:CORE_SHARED>
				$<TARGET_OBJECTS:PROFILE_SHARED>
				$<TARGET_OBJECTS:STATISTICS_SHARED>
				$<TARGET_OBJECTS:ALIGNMENT_FORMAT_SHARED>
				$<TARGET_OBJECTS:LIB_SHARED>
	)
	
	IF(TARGET INPUT_FORMAT_SHARED)
		SET(PRF_LIB_SOURCES ${PRF_LIB_SOURCES} $<TARGET_OBJECTS:INPUT_FORMAT_SHARED>)
  ENDIF(TARGET INPUT_FORMAT_SHARED)
	
	IF(PRF_CORE_PCRE)
		SET(PRF_LIB_SOURCES ${PRF_LIB_SOURCES} $<TARGET_OBJECTS:REGEX_SHARED>)
	ENDIF(PRF_CORE_PCRE)
	IF(PRF_CORE_MAP)
		SET(PRF_LIB_SOURCES ${PRF_LIB_SOURCES} $<TARGET_OBJECTS:MAP>)
	ENDIF(PRF_CORE_MAP)
	IF(HAS_MATRIX_OUTPUT)
		SET(PRF_LIB_SOURCES ${PRF_LIB_SOURCES} $<TARGET_OBJECTS:MATRIX_OUTPUT_SHARED>)
	ENDIF(HAS_MATRIX_OUTPUT)
	IF(PRF_CORE_DISPATCH AND HAS_DISPATCH)
		SET(PRF_LIB_SOURCES ${PRF_LIB_SOURCES} $<TARGET_OBJECTS:DISPATCH_SHARED>)
	ENDIF(PRF_CORE_DISPATCH AND HAS_DISPATCH)
	IF(PRF_WRAPPER_JAVA)
		SET(PRF_LIB_SOURCES ${PRF_LIB_SOURCES} $<TARGET_OBJECTS:JNI>)
	ENDIF(PRF_WRAPPER_JAVA)
  ADD_LIBRARY(prf_shared SHARED ${PRF_LIB_SOURCES})
  SET_TARGET_PROPERTIES(prf_shared PROPERTIES LINKER_LANGUAGE C
				      SOVERSION "${MAJOR_VERSION}.${MINOR_VERSION}"
				      LIBRARY_OUTPUT_NAME "prf"
  )
  TARGET_INCLUDE_DIRECTORIES(prf_shared PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/../include/;${CMAKE_CURRENT_BINARY_DIR}/../")
  ADD_DEPENDENCIES(prf_shared prf_git_version)
  TARGET_LINK_LIBRARIES(prf_shared PUBLIC m)
  IF(PRF_CORE_PCRE)
		TARGET_LINK_LIBRARIES(prf_shared PUBLIC ${PCRE_LIBRARY})
		TARGET_INCLUDE_DIRECTORIES(prf_shared PUBLIC "${PCRE_INCLUDE_DIR}")
  ENDIF(PRF_CORE_PCRE)
  IF(PRF_INPUT_HDF5)
		TARGET_LINK_LIBRARIES(prf_shared PUBLIC ${HDF5_C_LIBRARIES})
		SET_PROPERTY(TARGET prf_shared APPEND PROPERTY INCLUDE_DIRECTORIES "${HDF5_C_INCLUDE_DIR}")
		TARGET_INCLUDE_DIRECTORIES(prf_shared PUBLIC "${HDF5_C_INCLUDE_DIR}")
  ENDIF(PRF_INPUT_HDF5)
  IF(PRF_OUTPUT_PDF)
    TARGET_LINK_LIBRARIES(prf_shared PUBLIC ${HPDF_LIBRARIES})
  ENDIF(PRF_OUTPUT_PDF)
  IF(PRF_INPUT_PBBAM)
		TARGET_LINK_LIBRARIES(prf_shared PUBLIC ${PBBAM_LIBRARIES})
		SET_PROPERTY(TARGET prf_shared APPEND PROPERTY INCLUDE_DIRECTORIES "${PBBAM_INCLUDE_DIRS};${HTSLIB_DIR}")
  ENDIF(PRF_INPUT_PBBAM)
  IF(PRF_OUTPUT_GRAPHICS)
		TARGET_LINK_LIBRARIES(prf_shared PUBLIC "${GD_LIBRARIES};${PLplot_LIBRARIES}")
  ENDIF(PRF_OUTPUT_GRAPHICS)
  IF(PRF_OUTPUT_PDF)
		TARGET_LINK_LIBRARIES(prf_shared PUBLIC "${hpdf_LIBRARIES}")
  ENDIF(PRF_OUTPUT_PDF)
ENDIF(BUILD_SHARED_LIBS)
#
# Static library
#
IF(BUILD_STATIC_LIBS)
	SET(PRF_LIB_SOURCES
				$<TARGET_OBJECTS:CORE_STATIC>
				$<TARGET_OBJECTS:PROFILE_STATIC>
				$<TARGET_OBJECTS:STATISTICS_STATIC>
				$<TARGET_OBJECTS:ALIGNMENT_FORMAT_STATIC>
				$<TARGET_OBJECTS:LIB_STATIC>
  )
  
#   IF(TARGET PRF_MAP_SHARED)
#   ENDIF(TARGET PRF_MAP_SHARED)
  
  IF(TARGET INPUT_FORMAT_STATIC)
		LIST(APPEND PRF_LIB_SOURCES $<TARGET_OBJECTS:INPUT_FORMAT_STATIC>)
  ENDIF(TARGET INPUT_FORMAT_STATIC)
  
  IF(HAS_MATRIX_OUTPUT)
		SET(PRF_LIB_SOURCES ${PRF_LIB_SOURCES} $<TARGET_OBJECTS:MATRIX_OUTPUT_STATIC>)
	ENDIF(HAS_MATRIX_OUTPUT)
	IF(PRF_CORE_DISPATCH AND HAS_DISPATCH)
		SET(PRF_LIB_SOURCES ${PRF_LIB_SOURCES} $<TARGET_OBJECTS:DISPATCH_STATIC>)
	ENDIF(PRF_CORE_DISPATCH AND HAS_DISPATCH)
  ADD_LIBRARY(prf_static STATIC ${PRF_LIB_SOURCES})
  SET_TARGET_PROPERTIES(prf_static PROPERTIES LINKER_LANGUAGE C
				ARCHIVE_OUTPUT_NAME "prf"
  )
	TARGET_INCLUDE_DIRECTORIES(prf_static PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/../include/;${CMAKE_CURRENT_BINARY_DIR}/../")
  ADD_DEPENDENCIES(prf_static prf_git_version)
	IF(PRF_CORE_PCRE)
		TARGET_LINK_LIBRARIES(prf_shared PUBLIC ${PCRE_LIBRARY})
  ENDIF(PRF_CORE_PCRE)
  IF(PRF_INPUT_HDF5)
		TARGET_LINK_LIBRARIES(prf_shared PUBLIC ${HDF5_C_LIBRARIES})
# 		SET_PROPERTY(TARGET prf_shared APPEND PROPERTY INCLUDE_DIRECTORIES "${HDF5_C_INCLUDE_DIR}")
		TARGET_INCLUDE_DIRECTORIES(prf_static PUBLIC "${HDF5_C_INCLUDE_DIR}")
  ENDIF(PRF_INPUT_HDF5)
  IF(PRF_OUTPUT_PDF)
    TARGET_LINK_LIBRARIES(prf_shared PUBLIC ${HPDF_LIBRARIES})
  ENDIF(PRF_OUTPUT_PDF)
  IF(PRF_INPUT_PBBAM)
		TARGET_LINK_LIBRARIES(prf_shared PUBLIC ${PBBAM_LIBRARIES})
		SET_PROPERTY(TARGET prf_shared APPEND PROPERTY INCLUDE_DIRECTORIES "${PBBAM_INCLUDE_DIRS};${HTSLIB_DIR}")
  ENDIF(PRF_INPUT_PBBAM)
  IF(PRF_OUTPUT_GRAPHICS)
		TARGET_LINK_LIBRARIES(prf_shared PUBLIC "${GD_LIBRARIES};${PLplot_LIBRARIES}")
  ENDIF(PRF_OUTPUT_GRAPHICS)
  IF(PRF_OUTPUT_PDF)
		TARGET_LINK_LIBRARIES(prf_shared PUBLIC "${hpdf_LIBRARIES}")
  ENDIF(PRF_OUTPUT_PDF)
ENDIF(BUILD_STATIC_LIBS)

#
# Tools
#

IF(BUILD_TOOLS)
	ADD_SUBDIRECTORY(tools/)
ENDIF(BUILD_TOOLS)

#########################################################################################
# Tests 
IF (BUILD_TESTING)
  INCLUDE(${CMAKE_CURRENT_SOURCE_DIR}/../cmake/tests/TestSuite.cmake)
ENDIF(BUILD_TESTING)

#########################################################################################
# Installation
IF(BUILD_SHARED_LIBS)
  INSTALL(TARGETS prf_shared LIBRARY
	  DESTINATION lib
	  COMPONENT dev
  )
ENDIF(BUILD_SHARED_LIBS)
IF(BUILD_STATIC_LIBS)
  INSTALL(TARGETS prf_static
	  DESTINATION lib LIBRARY
	  COMPONENT dev
  )
ENDIF(BUILD_STATIC_LIBS)
IF(BUILD_SHARED_LIBS OR BUILD_STATIC_LIBS)
  IF(BUILD_SHARED_LIBS AND BUILD_STATIC_LIBS)
		EXPORT(TARGETS prf_shared prf_static
						FILE ${CMAKE_BINARY_DIR}/libprf.cmake
						EXPORT_LINK_INTERFACE_LIBRARIES)
  ELSE(BUILD_SHARED_LIBS AND BUILD_STATIC_LIBS)
		IF(BUILD_SHARED_LIBS)
			EXPORT(TARGETS prf_shared
						FILE ${CMAKE_BINARY_DIR}/libprf.cmake
						EXPORT_LINK_INTERFACE_LIBRARIES)
		ENDIF(BUILD_SHARED_LIBS)
		IF(BUILD_STATIC_LIBS)
			EXPORT(TARGETS prf_static
						FILE ${CMAKE_BINARY_DIR}/libprf.cmake
						EXPORT_LINK_INTERFACE_LIBRARIES)
		ENDIF(BUILD_STATIC_LIBS)
	ENDIF(BUILD_SHARED_LIBS AND BUILD_STATIC_LIBS)
ENDIF(BUILD_SHARED_LIBS OR BUILD_STATIC_LIBS)
