SET(SSE2_MATRIX_SOURCES "")
SET(SSE41_MATRIX_SOURCES "")

IF(PRF_CORE_HEURISTIC)
	LIST(APPEND SSE2_MATRIX_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/heuristic_sse2.c)
	LIST(APPEND SSE41_MATRIX_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/heuristic_sse41.c)
ENDIF(PRF_CORE_HEURISTIC)

IF(PRF_CORE_STD)
	LIST(APPEND SSE2_MATRIX_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/horizontal_sse2.c)
	LIST(APPEND SSE41_MATRIX_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/horizontal_sse41.c)
ENDIF(PRF_CORE_STD)

IF(PRF_CORE_REPEAT)
	LIST(APPEND SSE41_MATRIX_SOURCES  ${CMAKE_CURRENT_SOURCE_DIR}/repeat_horizontal_sse41.c)
ENDIF(PRF_CORE_REPEAT)

IF(PRF_CORE_FPGA)
	LIST(APPEND SSE41_MATRIX_SOURCES  ${CMAKE_CURRENT_SOURCE_DIR}/fpga_horizontal_sse41.c)
ENDIF(PRF_CORE_FPGA)

# IF(PRF_CORE_ZONE)
# 	LIST(APPEND SSE41_MATRIX_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/zone_horizontal_sse41.c)
# ENDIF(PRF_CORE_ZONE)

IF(PRF_CORE_EXT_PROFILE)
	LIST(APPEND SSE41_MATRIX_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/extprf_horizontal_sse41.c) 
ENDIF(PRF_CORE_EXT_PROFILE)

LIST(APPEND SSE41_MATRIX_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/horizontal_cigar_sse41.c) 

FOREACH(file IN LISTS SSE2_MATRIX_SOURCES)
	SET_PROPERTY(SOURCE ${file} APPEND PROPERTY COMPILE_FLAGS "${CMAKE_C_SSE2_FLAGS}")
ENDFOREACH(file)

FOREACH(file IN LISTS SSE41_MATRIX_SOURCES)
	SET_PROPERTY(SOURCE ${file} APPEND PROPERTY COMPILE_FLAGS "${CMAKE_C_SSE41_FLAGS}")
ENDFOREACH(file)

IF(BUILD_STATIC_LIBS)
	ADD_LIBRARY(CORE_STATIC OBJECT ${SSE41_MATRIX_SOURCES} ${SSE2_MATRIX_SOURCES})
ENDIF(BUILD_STATIC_LIBS)
IF(BUILD_SHARED_LIBS)
	ADD_LIBRARY(CORE_SHARED OBJECT ${SSE41_MATRIX_SOURCES} ${SSE2_MATRIX_SOURCES})
	SET_PROPERTY(TARGET CORE_SHARED PROPERTY POSITION_INDEPENDENT_CODE ON)
ENDIF(BUILD_SHARED_LIBS)
