############################# OUTPUT FORMAT ##################################
SET(OUTPUT_FORMAT_SOURCES format/Default.c)

IF(PRF_OUTPUT_FORMAT_FASEARCH)
	SET(OUTPUT_FORMAT_SOURCES ${OUTPUT_FORMAT_SOURCES} format/FaSearch.c ../utils/dna.c)
ENDIF(PRF_OUTPUT_FORMAT_FASEARCH)
IF(PRF_OUTPUT_FORMAT_FASTA)
	SET(OUTPUT_FORMAT_SOURCES ${OUTPUT_FORMAT_SOURCES} format/fasta.c)
ENDIF(PRF_OUTPUT_FORMAT_FASTA)
IF(PRF_OUTPUT_FORMAT_INCMATCH)
	SET(OUTPUT_FORMAT_SOURCES ${OUTPUT_FORMAT_SOURCES} format/IncMatch.c)
ENDIF(PRF_OUTPUT_FORMAT_INCMATCH)
IF(PRF_OUTPUT_FORMAT_INTERPRO)
	SET(OUTPUT_FORMAT_SOURCES ${OUTPUT_FORMAT_SOURCES} format/Interpro.c)
ENDIF(PRF_OUTPUT_FORMAT_INTERPRO)
IF(PRF_OUTPUT_FORMAT_ONELINE)
	SET(OUTPUT_FORMAT_SOURCES ${OUTPUT_FORMAT_SOURCES} format/OneLine.c)
ENDIF(PRF_OUTPUT_FORMAT_ONELINE)
IF(PRF_OUTPUT_FORMAT_PFSCAN)
	SET(OUTPUT_FORMAT_SOURCES ${OUTPUT_FORMAT_SOURCES} format/PfScan.c)
ENDIF(PRF_OUTPUT_FORMAT_PFSCAN)
IF(PRF_OUTPUT_FORMAT_PSSCAN)
	SET(OUTPUT_FORMAT_SOURCES ${OUTPUT_FORMAT_SOURCES} format/PsScan.c)
ENDIF(PRF_OUTPUT_FORMAT_PSSCAN)
IF(PRF_OUTPUT_FORMAT_SIMPLE)
	SET(OUTPUT_FORMAT_SOURCES ${OUTPUT_FORMAT_SOURCES} format/Simple.c)
ENDIF(PRF_OUTPUT_FORMAT_SIMPLE)
IF(PRF_OUTPUT_FORMAT_TSV)
	SET(OUTPUT_FORMAT_SOURCES ${OUTPUT_FORMAT_SOURCES} format/TSV.c)
ENDIF(PRF_OUTPUT_FORMAT_TSV)
IF(PRF_OUTPUT_FORMAT_XPSA)
	SET(OUTPUT_FORMAT_SOURCES ${OUTPUT_FORMAT_SOURCES} format/xPSA.c)
ENDIF(PRF_OUTPUT_FORMAT_XPSA)
IF(PRF_OUTPUT_FORMAT_PSMAKER)
	SET(OUTPUT_FORMAT_SOURCES ${OUTPUT_FORMAT_SOURCES} format/PSMaker.c)
ENDIF(PRF_OUTPUT_FORMAT_PSMAKER)
IF(PRF_OUTPUT_FORMAT_CLASSIFICATION)
	SET(OUTPUT_FORMAT_SOURCES ${OUTPUT_FORMAT_SOURCES} format/Classification.c)
ENDIF(PRF_OUTPUT_FORMAT_CLASSIFICATION)
IF(BUILD_STATIC_LIBS)
	ADD_LIBRARY(ALIGNMENT_FORMAT_STATIC OBJECT ${OUTPUT_FORMAT_SOURCES})
ENDIF(BUILD_STATIC_LIBS)
IF(BUILD_SHARED_LIBS)
	ADD_LIBRARY(ALIGNMENT_FORMAT_SHARED OBJECT ${OUTPUT_FORMAT_SOURCES})
	SET_PROPERTY(TARGET ALIGNMENT_FORMAT_SHARED PROPERTY POSITION_INDEPENDENT_CODE ON)
ENDIF(BUILD_SHARED_LIBS)

############################ MATRIX OUTPUT TOOLS #############################
SET(MATRIX_OUTPUT_SOURCES "")
IF(PRF_OUTPUT_DATA)
	SET(MATRIX_OUTPUT_SOURCES ${MATRIX_OUTPUT_SOURCES}
		  data/matrix_output_data.c
		  data/tab.c
			data/row.c
			data/column.c)
ENDIF(PRF_OUTPUT_DATA)
IF(PRF_OUTPUT_HIGHLIGHTED_FASTA)
	SET(MATRIX_OUTPUT_SOURCES ${MATRIX_OUTPUT_SOURCES}
		  Highlighted/fasta.c)
ENDIF(PRF_OUTPUT_HIGHLIGHTED_FASTA)
IF(PRF_OUTPUT_TEST)
	SET(MATRIX_OUTPUT_SOURCES ${MATRIX_OUTPUT_SOURCES}
      test/matrix_output_test.c)
ENDIF(PRF_OUTPUT_TEST)

IF(PRF_OUTPUT_GRAPHICS)
	SET(MATRIX_OUTPUT_SOURCES ${MATRIX_OUTPUT_SOURCES} image/matrix_output_png.c)
	SET_PROPERTY(SOURCE image/matrix_output_png.c APPEND PROPERTY COMPILE_FLAGS ${CMAKE_C_SSE41_FLAGS})
ENDIF(PRF_OUTPUT_GRAPHICS)
  
IF(PRF_OUTPUT_PDF)
	SET(MATRIX_OUTPUT_SOURCES ${MATRIX_OUTPUT_SOURCES} pdf/matrix_output_pdf.c)
	SET_PROPERTY(SOURCE pdf/matrix_output_pdf.c APPEND PROPERTY COMPILE_FLAGS ${CMAKE_C_SSE41_FLAGS})
ENDIF(PRF_OUTPUT_PDF)

IF(MATRIX_OUTPUT_SOURCES)
	IF(BUILD_STATIC_LIBS)
		ADD_LIBRARY(MATRIX_OUTPUT_STATIC OBJECT ${MATRIX_OUTPUT_SOURCES})
	ENDIF(BUILD_STATIC_LIBS)
	IF(BUILD_SHARED_LIBS)
		ADD_LIBRARY(MATRIX_OUTPUT_SHARED OBJECT ${MATRIX_OUTPUT_SOURCES})
		SET_PROPERTY(TARGET MATRIX_OUTPUT_SHARED PROPERTY POSITION_INDEPENDENT_CODE ON)
	ENDIF(BUILD_SHARED_LIBS)
	IF(PRF_OUTPUT_PDF)
		IF(BUILD_STATIC_LIBS)
	 		SET_PROPERTY(TARGET MATRIX_OUTPUT_STATIC APPEND PROPERTY INCLUDE_DIRECTORIES ${hpdf_INCLUDE_DIRS})
		ENDIF(BUILD_STATIC_LIBS)
		IF(BUILD_SHARED_LIBS)
			SET_PROPERTY(TARGET MATRIX_OUTPUT_SHARED APPEND PROPERTY INCLUDE_DIRECTORIES ${hpdf_INCLUDE_DIRS})
		ENDIF(BUILD_SHARED_LIBS)
	ENDIF(PRF_OUTPUT_PDF)
	IF(PRF_OUTPUT_GRAPHICS)
		IF(BUILD_STATIC_LIBS)
			SET_PROPERTY(TARGET MATRIX_OUTPUT_STATIC APPEND PROPERTY INCLUDE_DIRECTORIES ${GD_INCLUDE_DIRS})
		ENDIF(BUILD_STATIC_LIBS)
		IF(BUILD_SHARED_LIBS)
			SET_PROPERTY(TARGET MATRIX_OUTPUT_SHARED APPEND PROPERTY INCLUDE_DIRECTORIES ${GD_INCLUDE_DIRS})
		ENDIF(BUILD_SHARED_LIBS)
	ENDIF(PRF_OUTPUT_GRAPHICS)
	SET(HAS_MATRIX_OUTPUT TRUE PARENT_SCOPE)
ENDIF(MATRIX_OUTPUT_SOURCES)
